log
Tue Mar  2 00:45:22 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘suma’:
exercises.c:15:6: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
    c = a + b;
      ^
cc1: all warnings being treated as errors
Compilation failed
Tue Mar  2 00:45:32 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
f826713
Tue Mar  2 01:34:37 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
e10c5c6
Tue Mar  2 01:37:33 UTC 2021: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
93de2a5
Tue Mar  2 01:37:57 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
e3017d9
Tue Mar  2 01:38:12 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
baf54b1
Tue Mar  2 01:39:57 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
d4ae456
Tue Mar  2 01:41:30 UTC 2021: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
3c2fa31
Tue Mar  2 01:44:39 UTC 2021: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
283f811
Tue Mar  2 01:45:23 UTC 2021: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 30/70
bc3be00
Tue Mar  2 01:46:34 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
5b33d27
Tue Mar  2 01:50:03 UTC 2021: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
554e202
Thu Mar  4 02:22:52 UTC 2021: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
8642ab5
Thu Mar  4 02:34:19 UTC 2021: 
 exercises.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  4|3
total_score: 40/70
3866032
Fri Mar 12 19:57:09 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 50/70
474895b
Fri Mar 12 20:04:41 UTC 2021: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  0|0
2a61f4c
Fri Mar 12 20:06:41 UTC 2021: 
 exercises.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  0|0
b16dc06
Fri Mar 12 20:09:28 UTC 2021: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|0
0
1190564
Fri Mar 12 20:13:51 UTC 2021: 
 exercises.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  6|0
0 + 0f8c15d4
Fri Mar 12 20:14:33 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|0
32407 : 0 + 0448a20e
Fri Mar 12 20:15:36 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|0
32406d76cf8
Fri Mar 12 20:15:58 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|0
0 : 0 + 03f7c2bf
Fri Mar 12 20:24:10 UTC 2021: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|0
0 :bfc5b40
Fri Mar 12 20:25:52 UTC 2021: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  6|0
0 : 0 + 0 = 4846e38
Fri Mar 12 20:26:05 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|0
0 ': 0 + 0 =df3e2f5
Tue Mar 16 01:53:46 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|0
0 : 0 + 3c475c3
Fri Mar 19 00:44:49 UTC 2021: 
 exercises.c | 10 +++-------
 1 file changed, 3 insertions(+), 7 deletions(-)
 tests:  6|2
total_score: 50/70
dbcf205
Fri Mar 19 00:45:29 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 50/70
7a5cf2d
Fri Mar 19 00:46:46 UTC 2021: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  7|1
total_score: 60/70
9402515
Fri Mar 19 00:56:30 UTC 2021: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
a3a1d0e
